[gd_scene load_steps=8 format=3 uid="uid://dp2qiti6jvvw0"]

[ext_resource type="Script" path="res://scenes/Screens/tournament/tournament_screen.gd" id="1_5nxmo"]
[ext_resource type="Texture2D" uid="uid://o7jc4kdllm06" path="res://assets/assets/art/ui/teamselection/tournament-screen.png" id="2_hqyr1"]
[ext_resource type="PackedScene" uid="uid://dnt2t8ldkvam0" path="res://scenes/Screens/tournament/bracket_flag.tscn" id="3_real4"]
[ext_resource type="Texture2D" uid="uid://ncq45wnnsc3y" path="res://assets/assets/art/ui/flags/flag-vseparator.png" id="4_17ew5"]
[ext_resource type="Texture2D" uid="uid://cee5qfoe7lwff" path="res://assets/assets/art/ui/flags/flag-hseparator.png" id="5_h3gte"]
[ext_resource type="Texture2D" uid="uid://dmj131ktx4nbh" path="res://assets/assets/art/ui/teamselection/worldcup-label.png" id="6_3hibr"]
[ext_resource type="Texture2D" uid="uid://c1bkku7ciixw6" path="res://assets/assets/art/ui/teamselection/quarters-label.png" id="7_uujr7"]

[node name="TournamentScreen" type="Node"]
script = ExtResource("1_5nxmo")

[node name="Background" type="TextureRect" parent="."]
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("2_hqyr1")

[node name="BracketsContainer" type="HBoxContainer" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
alignment = 1

[node name="QuarterfinalLeftContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/QuarterfinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VLink" type="TextureRect" parent="Background/BracketsContainer/QuarterfinalLeftContainer"]
layout_mode = 2
texture = ExtResource("4_17ew5")

[node name="BracketFlag2" parent="Background/BracketsContainer/QuarterfinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VPading" type="Control" parent="Background/BracketsContainer/QuarterfinalLeftContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BracketFlag3" parent="Background/BracketsContainer/QuarterfinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VLink2" type="TextureRect" parent="Background/BracketsContainer/QuarterfinalLeftContainer"]
layout_mode = 2
texture = ExtResource("4_17ew5")

[node name="BracketFlag4" parent="Background/BracketsContainer/QuarterfinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="HPadding" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="SemifinalLeftContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/SemifinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VLink" type="TextureRect" parent="Background/BracketsContainer/SemifinalLeftContainer"]
layout_mode = 2
texture = ExtResource("4_17ew5")

[node name="BracketFlag2" parent="Background/BracketsContainer/SemifinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="HPadding2" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="FinalLeftContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/FinalLeftContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="FinalLink" type="VBoxContainer" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(4, 0)
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="TextureRect" type="TextureRect" parent="Background/BracketsContainer/FinalLink"]
layout_mode = 2
texture = ExtResource("5_h3gte")

[node name="FinalRightContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/FinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="HPadding3" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="SemifinalRightContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/SemifinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VLink" type="TextureRect" parent="Background/BracketsContainer/SemifinalRightContainer"]
layout_mode = 2
texture = ExtResource("4_17ew5")

[node name="BracketFlag2" parent="Background/BracketsContainer/SemifinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="HPadding4" type="Control" parent="Background/BracketsContainer"]
custom_minimum_size = Vector2(2, 0)
layout_mode = 2

[node name="QuarterfinalRightContainer" type="VBoxContainer" parent="Background/BracketsContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 0
alignment = 1

[node name="BracketFlag" parent="Background/BracketsContainer/QuarterfinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VLink" type="TextureRect" parent="Background/BracketsContainer/QuarterfinalRightContainer"]
layout_mode = 2
texture = ExtResource("4_17ew5")

[node name="BracketFlag2" parent="Background/BracketsContainer/QuarterfinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VPading" type="Control" parent="Background/BracketsContainer/QuarterfinalRightContainer"]
custom_minimum_size = Vector2(0, 8)
layout_mode = 2

[node name="BracketFlag3" parent="Background/BracketsContainer/QuarterfinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="VLink2" type="TextureRect" parent="Background/BracketsContainer/QuarterfinalRightContainer"]
layout_mode = 2
texture = ExtResource("4_17ew5")

[node name="BracketFlag4" parent="Background/BracketsContainer/QuarterfinalRightContainer" instance=ExtResource("3_real4")]
layout_mode = 2

[node name="Label" type="Label" parent="Background"]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -14.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0.2, 0.705882, 1, 1)
theme_override_constants/outline_size = 5
text = "Press any key to continue"
horizontal_alignment = 1

[node name="WorldCupTexture" type="TextureRect" parent="Background"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -90.0
offset_top = 4.0
offset_right = 90.0
offset_bottom = 33.0
grow_horizontal = 2
texture = ExtResource("6_3hibr")

[node name="StageTexture" type="TextureRect" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -69.0
offset_top = 35.0
offset_right = 69.0
offset_bottom = 63.0
grow_horizontal = 2
texture = ExtResource("7_uujr7")

[node name="WinnerContainer" type="Control" parent="Background"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BracketFlag" parent="Background/WinnerContainer" instance=ExtResource("3_real4")]
custom_minimum_size = Vector2(66, 42)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -33.0
offset_top = -57.0
offset_right = 33.0
offset_bottom = -15.0
grow_horizontal = 2
grow_vertical = 0
